<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_secondary10"
    tools:context=".ResultActivity"
    android:orientation="vertical"
    android:gravity="center"
    
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/result_title"
        android:textSize="30sp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/resultLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_Score"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="35dp"
        android:layout_marginTop="60dp"
        android:textColor="@color/white"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:id="@+id/tryAgainBtn"
        android:text="@string/try_again_btn"
        android:layout_marginTop="80dp"
        android:textColor="@color/white"
        android:textSize="30dp"
        />




</LinearLayout>