<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/material_dynamic_secondary10"
    tools:context=".PoliticsQuesDiff"
    tools:ignore="UsingOnClickInXML"

    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/question_number"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/questionNumber"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:id="@+id/question"
        android:text="@string/question"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/option1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:backgroundTint="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:onClick="checkAnswer"
        android:text="@string/answerGiven"
        android:textSize="25sp"

        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:text="@string/answerGiven"
        android:textSize="25sp"
        android:id="@+id/option2"
        android:onClick="checkAnswer"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:text="@string/answerGiven"
        android:textSize="25sp"
        android:id="@+id/option3"
        android:onClick="checkAnswer"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:text="@string/answerGiven"
        android:textSize="25sp"
        android:id="@+id/option4"
        android:onClick="checkAnswer"

        />




</LinearLayout>